--- a/DeusVultOnline/packages.config
+++ b/DeusVultOnline/packages.config
@@ -13,6 +13,8 @@
   <package id="Microsoft.Owin.Host.SystemWeb" version="2.1.0" targetFramework="net452" />
   <package id="Microsoft.Owin.Security" version="2.1.0" targetFramework="net452" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
+  <package id="Microsoft.Net.Compilers" version="1.0.0" targetFramework="net452" />
+  <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.0" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net452" />
   <package id="Swashbuckle" version="5.5.3" targetFramework="net452" />
