--- a/DeusVultOnline/Web.config
+++ b/DeusVultOnline/Web.config
@@ -1,10 +1,14 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=301879
   -->
 <configuration>
-  <appSettings></appSettings>
+  <appSettings>
+    <add key="mongoUser" value="admin"/>
+    <add key="mongoPassword" value="fqPfInOZUxNY6l7B"/>
+    <add key="connectionString" value="mongodb://cluster0-shard-00-00-iyd6q.mongodb.net:27017,cluster0-shard-00-01-iyd6q.mongodb.net:27017,cluster0-shard-00-02-iyd6q.mongodb.net:27017"/>
+  </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
