--- a/DeusVultOnline/packages.config
+++ b/DeusVultOnline/packages.config
@@ -9,15 +9,19 @@
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.3" targetFramework="net452" />
+  <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.0" targetFramework="net452" />
+  <package id="Microsoft.Net.Compilers" version="1.0.0" targetFramework="net452" />
   <package id="Microsoft.Owin" version="2.1.0" targetFramework="net452" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="2.1.0" targetFramework="net452" />
   <package id="Microsoft.Owin.Security" version="2.1.0" targetFramework="net452" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
-  <package id="Microsoft.Net.Compilers" version="1.0.0" targetFramework="net452" />
-  <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.0" targetFramework="net452" />
+  <package id="MongoDB.Bson" version="2.4.3" targetFramework="net452" />
+  <package id="MongoDB.Driver" version="2.4.3" targetFramework="net452" />
+  <package id="MongoDB.Driver.Core" version="2.4.3" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net452" />
   <package id="Swashbuckle" version="5.5.3" targetFramework="net452" />
   <package id="Swashbuckle.Core" version="5.5.3" targetFramework="net452" />
+  <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.0.0" targetFramework="net452" />
   <package id="WebActivatorEx" version="2.0" targetFramework="net452" />
 </packages>
