--- a/DeusVultOnline/DeusVultOnline.csproj
+++ b/DeusVultOnline/DeusVultOnline.csproj
@@ -176,6 +176,7 @@
     <Compile Include="Controllers\BaseController.cs" />
     <Compile Include="Controllers\FightController.cs" />
     <Compile Include="Controllers\MainController.cs" />
+    <Compile Include="Controllers\CharacterController.cs" />
     <Compile Include="Controllers\TroopsController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
