--- a/DeusVultOnline/DeusVultOnline.csproj
+++ b/DeusVultOnline/DeusVultOnline.csproj
@@ -133,10 +133,12 @@
   <ItemGroup>
     <Content Include="Global.asax" />
     <Content Include="index.html" />
+    <Content Include="Pages\Character.html" />
     <Content Include="Pages\Home.html" />
     <Content Include="Pages\Login.html" />
     <Content Include="Pages\MilitaryConfiguration.html" />
     <Content Include="Scripts\app\app.js" />
+    <Content Include="Scripts\app\controllers\characterController.js" />
     <Content Include="Scripts\app\controllers\loginController.js" />
     <Content Include="Scripts\app\controllers\homeController.js" />
     <Content Include="Scripts\app\controllers\militaryConfigurationController.js" />
@@ -177,9 +179,9 @@
     <Compile Include="Characters\ReligionProvider.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\BaseController.cs" />
+    <Compile Include="Controllers\CharacterController.cs" />
     <Compile Include="Controllers\FightController.cs" />
     <Compile Include="Controllers\MainController.cs" />
-    <Compile Include="Controllers\CharacterController.cs" />
     <Compile Include="Controllers\TroopsController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
